# simple-todo

./: .dockerignore  .env.example  Dockerfile  pyproject.toml
.github/workflows/: cd.yml  ci.yml  cicd.yml
conf/: settings.py
core/: api.py  models.py  serializers.py  test_api.py  urls.py
core/migrations/: 0001_initial.py
core/tests/: test_api.py  test_serializers.py
